# hypryaml

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/modules/: mod.rs
src/modules/hyprland/: hyprctl.rs  keywords.rs  mod.rs
src/modules/hyprpaper/: hyprctl.rs  mod.rs
src/utils/: error.rs  mod.rs  pair.rs  path.rs  system.rs  yaml.rs
src/workflow/: mod.rs
