[package]
name = "hypryaml"
description = "Dynamically set Hypr values using YAML !"
version = "0.2.0"
edition = "2024"

categories = ["command-line-utilities"]
homepage = "https://github.com/mccreemainwoody/hypryaml"
keywords = ["configuration", "hypr", "hyprland", "hyprland-theme"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mccreemainwoody/hypryaml"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
saphyr = "0.0.6"
shellexpand = "3.1.1"
